--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto");
 @import url("https://fonts.googleapis.com/css?family=Sarabun");
 
-.bg { /*bgmenuall*/
+.bg {
+  /*bgmenuall*/
   position: absolute;
   width: 100%;
   height: 100%;
@@ -11,7 +12,8 @@
   text-align: right;
 }
 
-.menu { /*menuall*/
+.menu {
+  /*menuall*/
   background-color: rgba(43, 43, 43, 0);
   position: absolute;
   width: 55%;
@@ -23,7 +25,8 @@
   z-index: 10;
 }
 
-.header { /*menuhead*/
+.header {
+  /*menuhead*/
   width: 100%;
   height: 6%;
   top: -3%;
@@ -33,7 +36,8 @@
   position: relative;
 }
 
-.header > div {  /* x*/
+.header > div {
+  /* x*/
   font-family: "Roboto";
   position: absolute;
   right: 0%;
@@ -46,11 +50,13 @@
   padding: 6px 12px 6px 12px;
 }
 
-.header > div:hover { /* x*/
+.header > div:hover {
+  /* x*/
   color: gold;
 }
 
-.header > span { /*menuhead*/
+.header > span {
+  /*menuhead*/
   font-size: 1.1vw;
   font-family: "Sarabun";
   font-weight: light;
@@ -60,7 +66,8 @@
   transform: translateY(-40%);
 }
 
-.content { /*allcolumn*/
+.content {
+  /*allcolumn*/
   width: 100%;
   height: 80%;
   position: relative;
@@ -68,28 +75,32 @@
   flex-direction: row;
   justify-items: center;
 }
-.category { /*column1*/
+.category {
+  /*column1*/
   margin-right: 2%;
   flex: 0 0 49%;
   background-color: rgba(20, 20, 20, 0.829);
   padding: 0% 0% 0% 0%;
   border-radius: 10px;
 }
-.category2 { /*column2*/
+.category2 {
+  /*column2*/
   margin-right: 0%;
   flex: 0 0 49%;
   background-color: rgba(20, 20, 20, 0.829);
   padding: 0% 0% 0% 0%;
   border-radius: 10px;
 }
-.list { /*ด้านล่าง*/
+.list {
+  /*ด้านล่าง*/
   flex: 0 0 50%;
   background-color: rgba(20, 20, 20, 0.829);
   overflow-y: auto;
   border-radius: 10px;
   margin-bottom: 1%;
 }
-.list-grid { /*ด้านล่าง*/
+.list-grid {
+  /*ด้านล่าง*/
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-gap: 1.5%;
@@ -104,7 +115,8 @@
   grid-column: 1 / 1;
 }
 
-.list-grid > *:first-child { /*ด้านล่าง*/
+.list-grid > *:first-child {
+  /*ด้านล่าง*/
   grid-row: 1 / 1;
   grid-column: 1 / 1;
 }
